HIL/src/objects/Financial_Account__c.object
<CustomObject>
    <description>Custom object to track financial account records populated via nightly integration with data warehouse.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Alt_Phone__c</fullName>
        <label>Alt Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BND_Discount__c</fullName>
        <label>BND Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bday_CYMD__c</fullName>
        <label>Bday CYMD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Nature__c</fullName>
        <label>Business Nature</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Available__c</fullName>
        <formula>(-1* Net_Ledger_Balance__c )+ Money_Market_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_CYMD__c</fullName>
        <label>Change CYMD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependents__c</fullName>
        <label>Dependents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discr_Trading_Code__c</fullName>
        <label>Discr Trading Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Addr2__c</fullName>
        <label>Email Addr2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Addr__c</fullName>
        <label>Email Addr</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer_Addr__c</fullName>
        <label>Employer Addr</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_City__c</fullName>
        <label>Employer City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_State__c</fullName>
        <label>Employer State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_ZIP4__c</fullName>
        <label>Employer ZIP4</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_ZIP__c</fullName>
        <label>Employer ZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Phone__c</fullName>
        <label>Fax Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Foreign_ZIP__c</fullName>
        <label>Foreign ZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Own_Rent__c</fullName>
        <label>Home Own Rent</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Inv_Obj__c</fullName>
        <label>Inv Obj</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invest_Exp_Ann__c</fullName>
        <label>Invest Exp Ann</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invest_Exp_MMF__c</fullName>
        <label>Invest Exp MMF</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invest_Exp_OPT__c</fullName>
        <label>Invest Exp OPT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invest_Exp_STK__c</fullName>
        <label>Invest Exp STK</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key1__c</fullName>
        <label>Key1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key2__c</fullName>
        <label>Key2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key3__c</fullName>
        <label>Key3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liq_Net_Worth__c</fullName>
        <label>Liq Net Worth</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liq_Net__c</fullName>
        <label>Liq Net</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Money_Market_Balance__c</fullName>
        <label>Money Market Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NameLines__c</fullName>
        <label>NameLines</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Line1__c</fullName>
        <label>Name Line1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Line2__c</fullName>
        <label>Name Line2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Line3__c</fullName>
        <label>Name Line3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Income__c</fullName>
        <label>Net Income</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Ledger_Balance__c</fullName>
        <label>Net Ledger Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Worth__c</fullName>
        <label>Net Worth</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_CYMD__c</fullName>
        <label>Open CYMD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Optn_I_O_Code__c</fullName>
        <label>Optn I O Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLAN_ID__c</fullName>
        <label>Plan ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province_Code__c</fullName>
        <label>Province Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep Code</label>
        <referenceTo>Rep_Code__c</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>Financial_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STK_Discount__c</fullName>
        <label>STK Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Equity__c</fullName>
        <label>Security Equity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spse_Bday_CYMD__c</fullName>
        <label>Spse Bday CYMD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spse_Bus_Nature__c</fullName>
        <label>Spse Bus Nature</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spse_Bus_Phone__c</fullName>
        <label>Spse Bus Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Spse_Emp_Addr__c</fullName>
        <label>Spse Emp Addr</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spse_Emp_City__c</fullName>
        <label>Spse Emp City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spse_Emp_Name__c</fullName>
        <label>Spse Emp Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spse_Emp_State__c</fullName>
        <label>Spse Emp State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spse_Emp_ZIP4__c</fullName>
        <label>Spse Emp ZIP4</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spse_Emp_ZIP__c</fullName>
        <label>Spse Emp ZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spse_Net_Income__c</fullName>
        <label>Spse Net Income</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spse_Occupation__c</fullName>
        <label>Spse Occupation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spse_Yrs_Employ__c</fullName>
        <label>Spse Yrs Employ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stmt_Month__c</fullName>
        <label>Stmt Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stmt_Year__c</fullName>
        <label>Stmt Year</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Bracket__c</fullName>
        <label>Tax Bracket</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_ID_Format__c</fullName>
        <label>Tax ID Format</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Account_Equity__c</fullName>
        <label>Total Account Equity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Years_Employed__c</fullName>
        <label>Years Employed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZIP_Plus4__c</fullName>
        <label>ZIP Plus4</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Financial Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Number__c</columns>
        <columns>NAME</columns>
        <columns>PLAN_ID__c</columns>
        <columns>Revenue__c</columns>
        <columns>Total_Account_Equity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Modifed_Today</fullName>
        <columns>Account_Number__c</columns>
        <columns>NAME</columns>
        <columns>PLAN_ID__c</columns>
        <columns>Revenue__c</columns>
        <columns>Total_Account_Equity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Modifed Today</label>
    </listViews>
    <listViews>
        <fullName>Trust_Accounts</fullName>
        <columns>Account_Number__c</columns>
        <columns>NAME</columns>
        <columns>PLAN_ID__c</columns>
        <columns>Revenue__c</columns>
        <columns>Total_Account_Equity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PLAN_ID__c</field>
            <operation>equals</operation>
            <value>HIT</value>
        </filters>
        <label>All Trust Accounts</label>
    </listViews>
    <listViews>
        <fullName>Trust_Accounts2</fullName>
        <columns>Account_Number__c</columns>
        <columns>NAME</columns>
        <columns>PLAN_ID__c</columns>
        <columns>Revenue__c</columns>
        <columns>Total_Account_Equity__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PLAN_ID__c</field>
            <operation>equals</operation>
            <value>HIT</value>
        </filters>
        <label>All Trust Accounts2</label>
    </listViews>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>